fixed tablet FAQ and About spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,7 @@ h1, h2, h3, h4 {
 
 h1 {
   font-size: 2.25em;
+  line-height: 1.2;
 }
  
 h2 {
@@ -767,12 +768,25 @@ aside .form {
 
   /**** ABOUT PAGE ****/
 
+  .mission {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+
   .mission-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 20px;
+    padding-top: 40px;
 }
+
+
+  .mission .content-wrapper {
+    padding: 0;
+    max-width: 730px;
+  }
 
   .mission-content p {
     width: 45%;
@@ -787,7 +801,11 @@ aside .form {
   }
 
   .contact-content h4 {
-    margin-bottom: 10px;
+    margin: 50px 0 10px 0;
+  }
+
+  .contact-section {
+    padding: 0;
   }
 
   .contact-section .content-wrapper h2 {
@@ -802,24 +820,53 @@ aside .form {
 
   /**** FAQ PAGE ****/
 
-  .faq .content-wrapper {
+  /* .faq .content-wrapper {
     justify-content: space-between;
     align-items: flex-start;
-    margin-bottom: 65px;
-  }
+    margin: 50px 0 65px 45px;
+  } */
 
   .faq-content {
     flex-basis: 45%;
-    margin-bottom: 0;
+  }
+
+  .faq {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-flow: row wrap;
+  }
+
+  .faq-content {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-flow: column wrap;
+    padding-top: 20px;
+}
+
+  .faq .content-wrapper {
+    padding: 0;
+    max-width: 730px;
+    margin-bottom: 35px;
+  }
+
+  .faq-content {
+    flex-basis: 48%;
   }
 
   .faq h2 {
     width: 100%;
-    margin: 30px 0 10px;
+    margin: 30px 0 30px;
   }
 
   .faq h4 {
     font-size: .875em;
+    padding-right: 50px;
+  }
+
+  .faq p {
+    padding-right: 50px;
   }
 
 }
